# openol

./: .gitignore  CMakeLists.txt  README.md
3ddata/: horn02-f000.3d
include/: Diffraction.h  Diffuser.h  Lensarry.h  Lensearry.h  golcgh.h  golclass.h  golprop.h  golutils.h  large.h  molprop.h  olcgh.h  olclass.h  oldefine.h  olimg.h  olobject.h  olprop.h  olutils.h  openol.h
openoltests/: Object_test.cpp  Prop_test.cpp  WRP_test.cu  cgh.cpp  diffraction_test.cpp  gObject_test.cu  gProp_test.cu  mProp_test.cu  para.h  tiltedProp_test.cpp
src/: Diffraction.cpp  Diffuser.cpp
tests/: CMakeLists.txt  CghProp_test.cu  Object_test.cpp  cgh.cpp  curand_test.cu  gObject_test.cu  gProp_test.cu  opencv_test.cpp  para.h  partialProp_test.cu
